Add card for Rocky

--- a/index.html
+++ b/index.html
@@ -342,6 +342,21 @@
 			</div>
 		</div>
 		<!-- Ruman End -->
+		<!-- Rocky Start -->
+		<div class="rocky-cont">
+			<div class="rocky-card">
+				<img src="./assets/images/Rocky.jpeg" alt="" class="rocky-img">
+				<div class="rocky-det">
+					<span class="which-animal"><a href="https://en.wikipedia.org/wiki/Pomeranian_dog" target="_blank">Pomeraninan</a></span>
+					<div class="rocky-name">Rocky</div> <hr>
+					<p>This is Rocky my adorable Pomeraninan<br> He loves to sit on the sofa all day and 
+						barks at anyone who disturbs his sleep <br>
+					Also he loves eating my snacks. </p>
+					<button class="my-git"> <a href="https://en.wikipedia.org/wiki/Pomeranian_dog" target="_blank">Pomeraninan</a></button>
+				</div>
+			</div>
+		</div>
+		<!-- Rocky end -->
 	</section>
 
 	<!-- Scripts -->
