--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				</div>
 			</div>
 		</div>
-		</div>
+
 		<!--  CoolDude69 End-->
 
 
@@ -220,6 +220,7 @@
 				<p><strong>Likes</strong>: Head rubs, short walks on your shoulders, and millet.</p>
 			</div>
 		</div>
+
 		<!--  Simbi Start-->
 		<div class="card">
 			<div class="img-container">
@@ -269,15 +270,18 @@
 		</div>
 		<!-- Mingkay End -->
 	
-	         <!--  mthakur Start-->
-         	<div class="mthakur-card">
-    		  <div class="napser-image">
-     			  <img src="./assets/images/pets/napser.jfif">
-     		 </div>
-      		 <div class="napser-info">
-         	<p>  <strong>Name:</strong> napser</p>
-          	<p>  <strong>Age:</strong> 3 </p>
-          	<p> <strong> Hobbies:</strong> Having fun </p>         	
+	    <!--  mthakur Start-->
+        <div class="mthakur-card">
+
+    		<div class="napser-image">
+     			 <img src="./assets/images/pets/napser.jfif">
+     		</div>
+
+      		<div class="napser-info">
+
+				<p>  <strong>Name:</strong> napser</p>
+				<p>  <strong>Age:</strong> 3 </p>
+				<p> <strong> Hobbies:</strong> Having fun </p>         	
           	
             </div>
           </div>
@@ -302,7 +306,7 @@
 		<div class="myPetWrapper">
 			<div class="myPetCard">
 
-				<div class="myPetImg"> </div>
+				<img class="myPetImg" src="./assets/images/fluffy1.jpg"> </img>
 
 				<div class="myPetInfo">
 					<h3 class = "petName">Fluf<span class = "petName-2">fyy</span></h3> <hr>
