--- a/index.html
+++ b/index.html
@@ -361,6 +361,23 @@
 			</div>
 		</div>
 		<!-- Rocky end -->
+	
+		<!-- Hazel Start -->
+		<div class="rocky-cont">
+			<div class="rocky-card">
+				<img src="./assets/images/hazel.jpg" alt="" class="rocky-img">
+				<div class="rocky-det">
+					<span class="which-animal"><a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">Poodle</a></span>
+					<div class="rocky-name">Hazel</div> <hr>
+					<p>This is Hazel my adorable Poodle<br> She loves to roam around the parks and street and eat tasty food.
+						She loves guests and everyone loves her. <br>
+					Also, she loves sleeping a lot. </p>
+					<button class="my-git"> <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">Poodle</a></button>
+				</div>
+			</div>
+		</div>
+		<!-- Rocky end -->	
+	
 	</section>
 
 	<!-- Scripts -->
