--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 		<!-- Hazel Start -->
 		<div class="rocky-cont">
 			<div class="rocky-card">
-				<img src="./assets/images/hazel.jpg" alt="" class="rocky-img">
+				<img src="./assets/images/hazel.jpg" alt="hazel" class="rocky-img">
 				<div class="rocky-det">
 					<span class="which-animal"><a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">Poodle</a></span>
 					<div class="rocky-name">Hazel</div> <hr>
