--- a/index.html
+++ b/index.html
@@ -361,6 +361,21 @@
 			</div>
 		</div>
 		<!-- Rocky end -->
+		<!-- Nikki Start-->
+		<div class="nikki_container" >
+            <div class="nikki_card">
+                <div class="nikki_front">
+                    <img src="./assets/images/cat.jpeg" alt="Adorable Kitty" style="width: 300px; height: 200px">
+                </div>
+                <div class="nikki_back">
+                    <h2>Meow</h2>
+                    <p>My name is Chrissy </p>
+                    <p>I like puzzles</p>
+                </div>
+            </div>
+        </div>
+		<!--Nikki end-->
+
 	</section>
 
 	<!-- Scripts -->
