caucasian shepherd dog card

--- a/index.html
+++ b/index.html
@@ -393,6 +393,48 @@
         </div>
 		<!--Nikki end-->
 
+		<!--Jay Start-->
+		<div class="dog-card-main center">
+			<div class="dog-card-box center">
+				<img class="caucasian_dog" src="./assets/images/ru.png" alt="caucasian shepherd">
+				<!--<audio class="bark" src="./assets/sounds/barking.wav"></audio>-->
+				<div>
+					<p class="dog_name">Caucasian Shepherd Dog</p>
+					<p class="phrase">Man's bestfriend</p>
+					<div class="attributes">
+						<div>Loyal</div>
+						<div>Strong</div>
+						<div>Courageous</div>
+					</div>
+				</div>
+				<div class="arr_container center">
+					<img src="./assets/icons/r-arrow.png" alt="next page">
+				</div>
+				<div class="left_container off">
+					<img src="./assets/images/ru.gif" alt="dog saving child">
+					<p>The Caucasian Shepherd Dog were bred to care for flocks and defend the home against wild predators 
+						in the rough Caucasus Mountain region. They’re also known as Caucasian Mountain Dogs, Russian Bear 
+						Dogs, Baskhan (Karachay) Pariy, Caucasian Ovcharka Dogs, or just CO, and there are many variants and 
+						types. This massive breed is highly territorial and won’t back down from a fight, even against bears 
+						or wolves. Caucasian Shepherd Dogs are intelligent, but their stubborn, independent nature can make 
+						them difficult to train.
+					</p>
+					
+					<div class="icons">
+						<a href="https://github.com/Jaytru1997"><img src="./assets/icons/github.png" alt="github icon"></a>
+						<a href="https://www.linkedin.com/in/oghenekparobo-o-997a6b17b"><img src="./assets/icons/linkedin.png" alt="linkedin icon"></a>
+						<a href="https://instagram.com/an_onosemuode"><img src="./assets/icons/instagram.png" alt="instagram icon"></a>
+						<a href="https://www.facebook.com/oghenekparobo.onosemuode"><img src="./assets/icons/facebook.png" alt="facebook icon"></a>
+						<a href="https://discord.gg/ZJbmV6q9pD"><img src="./assets/icons/discord.png" alt="discord icon"></a>
+					</div>
+					<div class="cancel center">
+						<img src="./assets/icons/cancel.png" alt="cancel button">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--Jay End-->
+
 	</section>
 
 	<!-- Scripts -->
