add card fixwad dark style

--- a/index.html
+++ b/index.html
@@ -435,6 +435,28 @@
 		</div>
 		<!--Jay End-->
 
+		<!-- Fixwad Dark Style -->
+		<div class="fixwad-wrapper">
+			<div class="fixwad-card">
+				<div class="fixwad-card-image">
+					<img src="./assets/images/miawmiaw.png" alt="miawmiaw">
+				</div>
+				<div class="fixwad-card-body">
+					<div class="fixwad-biodata">
+						<h1 class="name">Miawmiaw</h1>
+						<div class="devider"></div>
+						<p>Age: 2 months</p>
+						<p>Hobbies: sleeping, eating</p>
+						<p>Friends: ball</p>
+						<p>Enemy: water</p>
+					</div>
+
+					<a href="#" class="fixwad-button">Meet Miawmiaw</a>
+				</div>
+			</div>
+		</div>
+		<!-- ./End Fixwad Dark Style -->
+
 	</section>
 
 	<!-- Scripts -->
