modified oreo card content

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			<div class="oreo-content">
 				<h2 class="oreo-title">OREO</h2>
 				<p class="oreo-body">
-					Oreo likes to sleep and take a sunbath in the morning, poops when no one's around because he's shy, loves fish but he hates pedigree. 
+					Oreo likes to sleep and take a sunbath in the morning, poops when no one's around because he's shy, loves fish and he hates pedigree. 
 				</p>
 			</div>
 		</div>
