added my card (chitti-card)

--- a/index.html
+++ b/index.html
@@ -434,6 +434,32 @@
 			</div>
 		</div>
 		<!--Jay End-->
+ 
+
+
+	<!-- ---------------	sumit start----------- -->
+		<div class='Chitti-card'>
+			<div class="chitti-image">
+				<img src="./assets/images/chitti.jpg">
+			</div>
+			
+			<div class='info'>
+			  <h1 class='title'>Chitti</h1>
+			   <p class='description'>I'm a VIP: Very Important Puppy in the house.<br>
+				  <b>Name</b>:Chitti<br>
+				  <b>Age:</b> 1 year old<br>
+				  <b>Friends:</b> Me and my family<br>
+				  <b>Hobbies:</b> Eat, Sleep, Stare,Play<br>
+				 
+			  </p>
+			</div>
+		  </div>
+
+		  <!-- ----------sumit end --------------------- -->
+		
+
+
+
 
 	</section>
 
