added wave emoji

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 				</div>
 				<div class="pet-content">
 					<div class="pet-info">
-						<h2>Meoww, I'm Cat 🐱</h2>
+						<h2>Meoww <span class="wave">👋</span>, I'm Cat 🐱</h2>
 						<p>Besides that, I'm Dinesh's favourite pet😊. Read more about me <a target="_blank" href="https://en.wikipedia.org/wiki/Cat">here</a></p>
 					</div>
 					<div class="pet-author-info">
@@ -452,7 +452,7 @@
 						<a href="https://www.linkedin.com/in/dinesh-rout-a36306179/" target="_blank">
 							<img src="./assets/icons/linkedin.png" alt="linkedin">
 						</a>
-						<a href="" target="_blank">
+						<a href="https://discordapp.com/users/894994657744932885/" target="_blank">
 							<img src="./assets/icons/discord.png" alt="discord">
 						</a>
 					</div>
