added pet card markup

--- a/index.html
+++ b/index.html
@@ -494,6 +494,32 @@
 			</div>
 		</div>
 		<!-- ./End Fixwad Dark Style -->
+		<!-- Dinesh Start -->
+		<div class="pet-container">
+			<div class="pet-card">
+				<div class="pet-image">
+					<img src="https://images.pexels.com/photos/225406/pexels-photo-225406.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+				</div>
+				<div class="pet-content">
+					<div class="pet-info">
+						<h2>Meoww, I'm Cat 🐱</h2>
+						<p>Besides that, I'm Dinesh's favourite pet😊. Read more about me <a target="_blank" href="https://en.wikipedia.org/wiki/Cat">here</a></p>
+					</div>
+					<div class="pet-author-info">
+						<a href="https://github.com/DineshRout779" target="_blank">
+							<img src="./assets/icons/github.png" alt="github">
+						</a>
+						<a href="https://www.linkedin.com/in/dinesh-rout-a36306179/" target="_blank">
+							<img src="./assets/icons/linkedin.png" alt="linkedin">
+						</a>
+						<a href="" target="_blank">
+							<img src="./assets/icons/discord.png" alt="discord">
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Dinesh End -->
 	</section>
 
 	<!-- Scripts -->
