--- a/index.html
+++ b/index.html
@@ -92,6 +92,46 @@
 		<!------------------------------------------------------------------------------------------------->
 		<!-------------- 👇 ADD YOUR PET OR FAVOURITE ANIMAL CARD BELOW THIS COMMENT 👇  ------------------>
 		<!------------------------------------------------------------------------------------------------->
+
+		<!-- simretB05  -->
+		<div class="card-cho">
+			<div class="card-cho__container">
+				<div class="card-cho__img show">
+					<img class="card-cho__image" src="./assets/images/img-1.jpg" alt="">
+
+				</div>
+				<div class="card-cho__img ">
+					<img class="card-cho__image " src="./assets/images/img-2.jpg" alt="">
+
+				</div>
+				<div class="card-cho__img ">
+					<img class="card-cho__image " src="./assets/images/img-3.jpg" alt="">
+
+				</div>
+				<div class="card-cho__img ">
+					<img class="card-cho__image " src="./assets/images/img-4.jpg" alt="">
+
+				</div>
+
+			</div>
+			<div class="card-cho__content">
+				<h1 class="card-cho__title"> Chombe
+				</h1>
+				<p class="card-cho__text show">
+					Chombe, my favourite sweet Dog, he use to fallow me everywhere!,
+					ture friend, he will always be in my heart ❤
+				</p>
+
+			</div>
+			<div class="btn-container">
+				<button class=" btn prev">PREV</button>
+
+				<button class=" btn next">NEXT</button>
+
+			</div>
+
+		</div>
+		<!--  simretB05 -->
 		<!--  A-amon  -->
 		<div class="amon-card">
 			<div class="amon-card__img-wrapper">
@@ -148,7 +188,8 @@
 				<p><strong>Name:</strong> Jezebel</p>
 				<p><strong>Age:</strong> About 3 and a half</p>
 				<p><strong>Description:</strong> Calico Persian</p>
-				<p><strong>Hobbies:</strong> Napping, looking out the window, and laying on my desk while I'm working</p>
+				<p><strong>Hobbies:</strong> Napping, looking out the window, and laying on my desk while I'm working
+				</p>
 				<p><strong>Friends:</strong> Jinx, Jax, and Jagger</p>
 				<p><strong>Enemies:</strong> An empty food bowl!</p>
 			</div>
@@ -268,27 +309,29 @@
 			</div>
 		</div>
 		<!-- Mingkay End -->
-	
-	         <!--  mthakur Start-->
-         	<div class="mthakur-card">
-    		  <div class="napser-image">
-     			  <img src="./assets/images/pets/napser.jfif">
-     		 </div>
-      		 <div class="napser-info">
-         	<p>  <strong>Name:</strong> napser</p>
-          	<p>  <strong>Age:</strong> 3 </p>
-          	<p> <strong> Hobbies:</strong> Having fun </p>         	
-          	
-            </div>
-          </div>
-    <!--  mthakur End-->
+
+		<!--  mthakur Start-->
+		<div class="mthakur-card">
+			<div class="napser-image">
+				<img src="./assets/images/pets/napser.jfif">
+			</div>
+			<div class="napser-info">
+				<p> <strong>Name:</strong> napser</p>
+				<p> <strong>Age:</strong> 3 </p>
+				<p> <strong> Hobbies:</strong> Having fun </p>
+
+			</div>
+		</div>
+		<!--  mthakur End-->
 
 		<!-- Shera start -->
 		<div class="roshan">
 			<div>
 				<img src="./assets/images/shera.jpeg" width=325 alt="Shera" class="roshan1">
 			</div>
-			<h1 class="kilas">Shera<hr></h1>
+			<h1 class="kilas">Shera
+				<hr>
+			</h1>
 			<div id="detail-shera">
 				<p><strong>My lovely pitbull</strong></p>
 				<p><strong>Name:</strong>&nbsp &nbsp<strong>Shera</strong></p>
@@ -305,21 +348,23 @@
 				<div class="myPetImg"> </div>
 
 				<div class="myPetInfo">
-					<h3 class = "petName">Fluf<span class = "petName-2">fyy</span></h3> <hr>
+					<h3 class="petName">Fluf<span class="petName-2">fyy</span></h3>
+					<hr>
 
-                    <p> <strong>Age:</strong> 1 year old <br>
-					<strong>Hobbies:</strong> sleeping, scratching,    chewing on wires, meowing <br>
-					<strong>Friends:</strong> cottony, furry, woolly <br>
-					<strong>Enemies:</strong> Everyone </p>
+					<p> <strong>Age:</strong> 1 year old <br>
+						<strong>Hobbies:</strong> sleeping, scratching, chewing on wires, meowing <br>
+						<strong>Friends:</strong> cottony, furry, woolly <br>
+						<strong>Enemies:</strong> Everyone
+					</p>
 
-                <div class="meetMyPet">
-                    <button class = "meetMeow">meet meow</button>
-                </div>
+					<div class="meetMyPet">
+						<button class="meetMeow">meet meow</button>
+					</div>
 
 				</div>
 
 			</div>
-    	</div>
+		</div>
 		<!-- Fluffy END -->
 	</section>
 
