--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
 
 			</div>
 			<div class="card-cho__content">
-				<h1 class="card-cho__title"> Chombe
+				<h1 class="card-cho__title"> Chombe 🐶
 				</h1>
 				<p class="card-cho__text show">
 					Chombe, my favourite sweet Dog, he use to fallow me everywhere!,
-					ture friend, he will always be in my heart ❤
+					true friend, he will always be in my heart ❤
 				</p>
 
 			</div>
