--- a/index.html
+++ b/index.html
@@ -516,6 +516,28 @@
 
         <!-------------------------rambo-end------------------------------>
 
+        <!--  TIGGER-START -->
+
+        <div class="cat-container">
+            <div class="header">
+              <img src="./assets/images/Tigger.jpg" alt="picture of cat" />
+            </div>
+            <div class="title">
+              <h1>Tigger</h1>
+              <div>
+                <span class="info">
+                  My Lovely Tigger is now 18 Years old! Favorite Action: Sleeping
+                  <br />
+                  Favorite Food: Cheese
+                  <br />
+                  Hobbies: Kick stuff from the table
+                </span>
+              </div>
+            </div>
+          </div>
+
+          <!-- TIGGER-END -->
+
     </section>
 
     <!-- Scripts -->
