--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
               <h1 class="card-title">Jimmy</h1>
               <h1>3 years old</h1>
               <p>I'm Cute,Trained and a very friendly dog although a little hungry all the time.</p>
-              <a href="https://lokesh-rathore.github.io/tindog.github.io/" class="btn jm-btn">Meet me at Tindog</a> 
+              <a href="https://lokesh-rathore.github.io/tindog.github.io/" class="btn jm-btn">Meet me at Tindog</a>
               <br>
               <br>
               <a href="https://en.wikipedia.org/wiki/Golden_Retriever" class="btn jm-btn">About me</a>
@@ -556,13 +556,31 @@
         <!-- Jimmy's Card end -->
 	<!-- Lily's Card Start-->
         <div class="main_lily_card">
-            <img src="assets/images/lily.jpg" alt=""> 
+            <img src="assets/images/lily.jpg" alt="">
             <div class="lily_info">
                 <h2>🐾LILY🐾</h2>
                 <p><b>Hobby:</b> Going for walk<br><b>Strength:</b> Innocent face🐶<br> <b>Weakness:</b> Chocolates </p>
             </div>
         </div>
         <!-- Lily's Card End-->
+
+        <!--Emma's Card -->
+        <div class="emma-flip-card">
+          <div class="emma-flip-card-inner">
+            <div class="emma-flip-card-front">
+              <img src="assets/images/emma.jpeg" alt="Avatar" style="width:300px;height:400px;">
+            </div>
+            <div class="emma-flip-card-back">
+              <h1>Hey I am Emma</h1>
+              <p>My motto is Eat Sleep and Repeat</p>
+              <p>I like spicy food</p>
+              <p>
+                My favorite place to sleep is my master's lap
+              </p>
+            </div>
+          </div>
+      </div>
+
     </section>
 
     <!-- Scripts -->
