Added a new cat - Emma

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
               <h1 class="card-title">Jimmy</h1>
               <h1>3 years old</h1>
               <p>I'm Cute,Trained and a very friendly dog although a little hungry all the time.</p>
-              <a href="https://lokesh-rathore.github.io/tindog.github.io/" class="btn jm-btn">Meet me at Tindog</a> 
+              <a href="https://lokesh-rathore.github.io/tindog.github.io/" class="btn jm-btn">Meet me at Tindog</a>
               <br>
               <br>
               <a href="https://en.wikipedia.org/wiki/Golden_Retriever" class="btn jm-btn">About me</a>
@@ -556,7 +556,7 @@
         <!-- Jimmy's Card end -->
 	<!-- Lily's Card Start-->
         <div class="main_lily_card">
-            <img src="assets/images/lily.jpg" alt=""> 
+            <img src="assets/images/lily.jpg" alt="">
             <div class="lily_info">
                 <h2>🐾LILY🐾</h2>
                 <p><b>Hobby:</b> Going for walk<br><b>Strength:</b> Innocent face🐶<br> <b>Weakness:</b> Chocolates </p>
@@ -578,6 +578,21 @@
             </div>
         </div>
         <!-- Thomas's Card End -->
+
+        <!-- Emma's Card start-->
+
+         <div class="emma-card">
+           <div class="emma-imgBx">
+               <img src="assets/images/emma.jpeg" alt="images">
+           </div>
+           <div class="emma-details">
+               <h2>Emma<br><span>Motto: Eat Sleep and Repeat</span></h2>
+           </div>
+         </div>
+        
+
+    <!--Emma's card end-->
+
     </section>
 
     <!-- Scripts -->
