--- a/index.html
+++ b/index.html
@@ -595,6 +595,11 @@
 
     </section>
 
+    <footer>
+        <p> Want to know more about our team? 👇 </p>
+        <a href="https://junior-developer-group.com/" target="_blank">junior-developer-group.com</a>
+    </footer>
+
     <!-- Scripts -->
     <script src="./assets/scripts/main.js"></script>
     <script type='text/javascript' src='./assets/scripts/joinUs.js'></script>
