--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
     <!-- SEO SETTINGS FOR GOOGLE-->
     <meta name="author" content="HacktoberPet by Junior Developer Group" />
-    <meta name="description" content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
+    <meta name="description"
+        content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
 
     <!-- SEO SETTINGS FOR WHEN WEBSITE URL IS SHARED -->
     <meta name="og:title" property="og:title" content="HacktoberPet by Junior Developer Group" />
-    <meta property="og:description" content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
+    <meta property="og:description"
+        content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
     <meta property="og:image" content="/assets/website-images/logo-with-background.png" />
 
     <!-- WEBSITE TITLE-->
@@ -44,14 +46,16 @@
 
             <p>This page was set up as a simple front end challenge for
                 <a href="https://hacktoberfest.digitalocean.com/" target="_blank" noreferer>
-					HacktoberFest 2021 event.
-				</a>
+                    HacktoberFest 2021 event.
+                </a>
             </p>
 
-            <p> The goal is to create your personal pet or favourite animal card, style it any way you'd like to and have fun making it. </p>
+            <p> The goal is to create your personal pet or favourite animal card, style it any way you'd like to and
+                have fun making it. </p>
 
             <p>
-                Before you start, please have a look at a couple of participation rules I've set up. Not following the set rules might get your pull request rejected.
+                Before you start, please have a look at a couple of participation rules I've set up. Not following the
+                set rules might get your pull request rejected.
             </p>
 
             <div class="welcome-content__rules">
@@ -111,7 +115,8 @@
                 <h1 class="card-cho__title"> Chombe 🐶
                 </h1>
                 <p class="card-cho__text show">
-                    Chombe, my favourite sweet Dog, he use to fallow me everywhere!, true friend, he will always be in my heart ❤
+                    Chombe, my favourite sweet Dog, he use to fallow me everywhere!, true friend, he will always be in
+                    my heart ❤
                 </p>
 
             </div>
@@ -138,8 +143,8 @@
                 </p>
                 <div class="amon-card__footer">
                     <strong class="amon-card__desc upper">
-						You found me!
-					</strong>
+                        You found me!
+                    </strong>
                     <p class="amon-card__desc">
                         Now, get back to work 😂
                     </p>
@@ -153,7 +158,8 @@
             <div class="oreo-content">
                 <h2 class="oreo-title">OREO</h2>
                 <p class="oreo-body">
-                    Oreo likes to sleep and take a sunbath in the morning, poops when no one's around because he's shy, loves fish and he hates pedigree.
+                    Oreo likes to sleep and take a sunbath in the morning, poops when no one's around because he's shy,
+                    loves fish and he hates pedigree.
                 </p>
             </div>
         </div>
@@ -168,7 +174,8 @@
                 </div>
                 <div class="buddyCardBack">
                     <h1>Buddy</h1>
-                    <p>This is my horse Buddy, ive owned him for 17 years, he is very much part of the family and although he is retired now he still keeps me on my toes!</p>
+                    <p>This is my horse Buddy, ive owned him for 17 years, he is very much part of the family and
+                        although he is retired now he still keeps me on my toes!</p>
                     <ul>
                         <li>❤️ Age: 24</li>
                         <li>❤️ Likes: Food! </li>
@@ -215,7 +222,7 @@
                     </ul>
                     <br />
                     <a href="https://en.wikipedia.org/wiki/Tortoise" target="_blank"><button class="btn-portfolio">More
-							Info</button></a>
+                            Info</button></a>
                 </div>
             </div>
         </div>
@@ -231,7 +238,8 @@
             <div class="catthew-info">
                 <p> <strong>Name:</strong> Catthew 👑</p>
                 <p> <strong>Age:</strong> 1 and a bit </p>
-                <p> <strong> Hobbies:</strong> Catching frogs, meowing at birds, removing household wires and walking on keyboards 🐱 </p>
+                <p> <strong> Hobbies:</strong> Catching frogs, meowing at birds, removing household wires and walking on
+                    keyboards 🐱 </p>
                 <p> <strong>Friends:</strong> Busy Cat, Girl Cat </p>
                 <p> <strong>Enemies:</strong> Old White Cat </p>
             </div>
@@ -279,7 +287,8 @@
                         <br />
                         <strong>Age:</strong> 2 years old
                         <br />
-                        <strong>Likes</strong>: Sniff around and explore new areas ,Playing with ball and eating Bell peppers
+                        <strong>Likes</strong>: Sniff around and explore new areas ,Playing with ball and eating Bell
+                        peppers
                         <br />
                         <strong>Dislikes</strong>: Being alone, being ignored.
                         <br />
@@ -382,7 +391,8 @@
                         Cheetah
                     </div>
                     <div class="ruman-card-details-content-description">
-                        My favourite animal is Cheetah because they are fast and in fact, is the fastest animal in the world. The cheetah print stuff is preety cool as well.
+                        My favourite animal is Cheetah because they are fast and in fact, is the fastest animal in the
+                        world. The cheetah print stuff is preety cool as well.
                     </div>
                 </div>
             </div>
@@ -394,12 +404,13 @@
                 <img src="./assets/images/Rocky.jpeg" alt="" class="rocky-img">
                 <div class="rocky-det">
                     <span class="which-animal"><a href="https://en.wikipedia.org/wiki/Pomeranian_dog"
-							target="_blank">Pomeraninan</a></span>
+                            target="_blank">Pomeraninan</a></span>
                     <div class="rocky-name">Rocky</div>
                     <hr>
-                    <p>This is Rocky my adorable Pomeraninan<br> He loves to sit on the sofa all day and barks at anyone who disturbs his sleep <br> Also he loves eating my snacks. </p>
+                    <p>This is Rocky my adorable Pomeraninan<br> He loves to sit on the sofa all day and barks at anyone
+                        who disturbs his sleep <br> Also he loves eating my snacks. </p>
                     <button class="my-git"> <a href="https://en.wikipedia.org/wiki/Pomeranian_dog"
-							target="_blank">Pomeraninan</a></button>
+                            target="_blank">Pomeraninan</a></button>
                 </div>
             </div>
         </div>
@@ -411,12 +422,13 @@
                 <img src="./assets/images/hazel.jpg" alt="hazel" class="rocky-img">
                 <div class="rocky-det">
                     <span class="which-animal"><a href="https://en.wikipedia.org/wiki/Poodle"
-							target="_blank">Poodle</a></span>
+                            target="_blank">Poodle</a></span>
                     <div class="rocky-name">Hazel</div>
                     <hr>
-                    <p>This is Hazel my adorable Poodle<br> She loves to roam around the parks and street and eat tasty food. She loves guests and everyone loves her. <br> Also, she loves sleeping a lot. </p>
+                    <p>This is Hazel my adorable Poodle<br> She loves to roam around the parks and street and eat tasty
+                        food. She loves guests and everyone loves her. <br> Also, she loves sleeping a lot. </p>
                     <button class="my-git"> <a href="https://en.wikipedia.org/wiki/Poodle"
-							target="_blank">Poodle</a></button>
+                            target="_blank">Poodle</a></button>
                 </div>
             </div>
         </div>
@@ -456,17 +468,26 @@
                 </div>
                 <div class="left_container off">
                     <img src="./assets/images/ru.gif" alt="dog saving child">
-                    <p>The Caucasian Shepherd Dog were bred to care for flocks and defend the home against wild predators in the rough Caucasus Mountain region. They’re also known as Caucasian Mountain Dogs, Russian Bear Dogs, Baskhan (Karachay) Pariy, Caucasian
-                        Ovcharka Dogs, or just CO, and there are many variants and types. This massive breed is highly territorial and won’t back down from a fight, even against bears or wolves. Caucasian Shepherd Dogs are intelligent, but their stubborn,
+                    <p>The Caucasian Shepherd Dog were bred to care for flocks and defend the home against wild
+                        predators in the rough Caucasus Mountain region. They’re also known as Caucasian Mountain Dogs,
+                        Russian Bear Dogs, Baskhan (Karachay) Pariy, Caucasian
+                        Ovcharka Dogs, or just CO, and there are many variants and types. This massive breed is highly
+                        territorial and won’t back down from a fight, even against bears or wolves. Caucasian Shepherd
+                        Dogs are intelligent, but their stubborn,
                         independent nature can make them difficult to train.
                     </p>
 
                     <div class="icons">
-                        <a href="https://github.com/Jaytru1997"><img src="./assets/icons/github.png" alt="github icon"></a>
-                        <a href="https://www.linkedin.com/in/oghenekparobo-o-997a6b17b"><img src="./assets/icons/linkedin.png" alt="linkedin icon"></a>
-                        <a href="https://instagram.com/an_onosemuode"><img src="./assets/icons/instagram.png" alt="instagram icon"></a>
-                        <a href="https://www.facebook.com/oghenekparobo.onosemuode"><img src="./assets/icons/facebook.png" alt="facebook icon"></a>
-                        <a href="https://discord.gg/ZJbmV6q9pD"><img src="./assets/icons/discord.png" alt="discord icon"></a>
+                        <a href="https://github.com/Jaytru1997"><img src="./assets/icons/github.png"
+                                alt="github icon"></a>
+                        <a href="https://www.linkedin.com/in/oghenekparobo-o-997a6b17b"><img
+                                src="./assets/icons/linkedin.png" alt="linkedin icon"></a>
+                        <a href="https://instagram.com/an_onosemuode"><img src="./assets/icons/instagram.png"
+                                alt="instagram icon"></a>
+                        <a href="https://www.facebook.com/oghenekparobo.onosemuode"><img
+                                src="./assets/icons/facebook.png" alt="facebook icon"></a>
+                        <a href="https://discord.gg/ZJbmV6q9pD"><img src="./assets/icons/discord.png"
+                                alt="discord icon"></a>
                     </div>
                     <div class="cancel center">
                         <img src="./assets/icons/cancel.png" alt="cancel button">
@@ -489,7 +510,10 @@
                 <li>Deadly.</li>
             </ul>
             <p>
-                Photo by <a href="https://unsplash.com/@mpayne66?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Michael Payne</a> on <a href="https://unsplash.com/s/photos/red-panda?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                Photo by <a
+                    href="https://unsplash.com/@mpayne66?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                    target="_blank">Michael Payne</a> on <a
+                    href="https://unsplash.com/s/photos/red-panda?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
                     target="_blank">Unsplash</a>
             </p>
         </div>
@@ -500,21 +524,41 @@
         <!-------------------------rambo-start---------------------------->
         <div class="rambo">
             <div class="rambo-image">
-                <img src="./assets/images/pandu.jpg" alt="pandu" width="100%" height="100%" style="border-top-left-radius: 19px ;">
+                <img src="./assets/images/pandu.jpg" alt="pandu" width="100%" height="100%"
+                    style="border-top-left-radius: 19px ;">
             </div>
             <div class="rambo-head">
                 <div id="p1">Rambo</div>
                 <div class="rambo-text" id="p2">A 4-years old, 10 Kgs
                     <div id="p3" color: red;>
                         Red Panda
-                    </div>, who likes to EAT, EAT and EAT. Also an extrovert who enjoys meeting strangers.</div>
+                    </div>, who likes to EAT, EAT and EAT. Also an extrovert who enjoys meeting strangers.
+                </div>
             </div>
             <div class="rambo-foot">
-                <button onclick="window.location.href='https://www.worldwildlife.org/species/red-panda'">More about Red Pandas</button>
+                <button onclick="window.location.href='https://www.worldwildlife.org/species/red-panda'">More about Red
+                    Pandas</button>
             </div>
         </div>
 
         <!-------------------------rambo-end------------------------------>
+
+        <!--  milo Start-->
+        <div class="card" style="text-align: left; border-radius: 3%; border: black;">
+            <div>
+                <img style="border-radius: 3%;"
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5CiBrH1r-CHdjPAyaNxgWrS4KdJEdIES_TA&usqp=CAU">
+            </div>
+            <div>
+                <p> <strong>Name:</strong>Milo</p>
+                <p> <strong>Age:</strong>1 year</p>
+                <p> <strong> Hobbies:</strong> Running around mouse <br> and lizards,always eating and <br> being
+                    friendly</p>
+                <p> <strong>Friends:</strong>Neighbour's dog "Toby"</p>
+                <p> <strong>Enemies:</strong>Lemon and cats</p>
+            </div>
+        </div>
+        <!--  milo End-->
 
     </section>
 
