added german shepherd card

--- a/index.html
+++ b/index.html
@@ -593,6 +593,16 @@
 
     <!--Emma's card end-->
 
+    <!-- Promise's card start -->
+
+    <div class="promise shepherd">
+        <h2 class="shepherd">German Shepherd</h2>
+        <p>The German Shepherd Dog is one of America’s most popular dog breeds </p>
+        <div class="learn-container shepherd" target="_blank"><a href="https://dogtime.com/dog-breeds/german-shepherd-dog#/slide/1" class="learn">Learn More</a></div>
+        <div class="dog_circle shepherd"></div>
+      </div>
+    <!-- Promise's card end -->
+
     </section>
 
     <footer>
