Add card for macy

--- a/index.html
+++ b/index.html
@@ -593,6 +593,21 @@
 
     <!--Emma's card end-->
 
+    <!-- Mac's Card start -->
+    <div class="macy-card">
+        <div class="image">
+            <img src="assets/images/macy.png" alt="">
+        </div>
+        <div class="hidden">
+            <h1 class="name">Macy</h1>
+            <p class="description">
+                This is our cat, he like to fight other cats and is always begging for food
+            </p>
+        </div>
+    </div>
+    <!-- Mac's Card end -->
+
+
     </section>
 
     <!-- Scripts -->
