--- a/index.html
+++ b/index.html
@@ -603,6 +603,22 @@
       </div>
     <!-- Promise's card end -->
 
+    <!-- Macy's Card Start -->
+
+    <div class="macy-card">
+        <div class="image">
+            <img src="assets/images/macy.png" alt="">
+        </div>
+        <div class="hidden">
+            <h1 class="name">Macy</h1>
+            <p class="description">
+                This is our cat, he like to fight other cats and is always begging for food
+            </p>
+        </div>
+    </div>
+
+    <!-- Macy's Card End -->
+
     </section>
 
     <footer>
