--- a/index.html
+++ b/index.html
@@ -544,14 +544,14 @@
         <!-------------------------rambo-end------------------------------>
 
         <!--  milo Start-->
-        <div class="card" style="text-align: left; border-radius: 3%; border: black;">
+        <div class="milo-card">
             <div>
-                <img style="border-radius: 3%;"
+                <img class="milo-img"
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5CiBrH1r-CHdjPAyaNxgWrS4KdJEdIES_TA&usqp=CAU">
             </div>
-            <div>
-                <p> <strong>Name:</strong>Milo</p>
-                <p> <strong>Age:</strong>1 year</p>
+            <div class="milo-txt">
+                <p> <strong>Milo</p>
+                <p> <strong>1 yrs old</p>
                 <p> <strong> Hobbies:</strong> Running around mouse <br> and lizards,always eating and <br> being
                     friendly</p>
                 <p> <strong>Friends:</strong>Neighbour's dog "Toby"</p>
