Added image card

--- a/index.html
+++ b/index.html
@@ -603,6 +603,22 @@
       </div>
     <!-- Promise's card end -->
 
+    <!-- Adhvaidh's Card Start -->
+      <div class="adhvaidh-card">
+          <div class="inner-card">
+            <img src="assets/images/adhvaidh.jpg" alt="">
+            <h1>Zimba</h1>
+            <div class="hobbies-section">
+                <span>Eating</span>
+                <span>Sleeping</span>
+            </div>
+          </div>
+      </div>
+
+
+    <!-- Adhvaidh's Card End -->
+
+
     </section>
 
     <footer>
