add Kira card :)

--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
         <!------------------------------------------------------------------------------------------------->
         <!-------------- 👇 ADD YOUR PET OR FAVOURITE ANIMAL CARD BELOW THIS COMMENT 👇  ------------------>
         <!------------------------------------------------------------------------------------------------->
+        <!-- kira card -->
+        <div class="kira-card">
+            <div class="kira-img"></div>
+            <div id="kira-info">
+                <p>Kira</p>
+                <p>3 years old</p>
+                <p>bernese mountain </p>
+                <p>Hobbies: eat 🥩 and sleep 💤</p>
+            </div>
+        </div>
+
         <!--  simretB05  -->
         <div class="card-cho">
             <div class="card-cho__container">
