--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <!-- FAVICON -->
     <link rel="icon" type="image/jpg" href="./assets/images/favicon.ico" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300;500;700&display=swap" rel="stylesheet">
+
     <!-- CSS STYLESHEET -->
     <link rel="stylesheet" href="./assets/styles/style.css" />
 </head>
@@ -644,6 +648,107 @@
     </div>
 
     <!-- Macy's Card End -->
+
+        <!-- Tom Lynch's card for Freyja -->
+
+        <div class="tl-card">
+            <div class="card-internals">
+                <div class="tl-title">
+                    <div class="name tl-gradient-border">
+                        <div class="content">
+                            <p>Freyja</p>
+                            <p class="role">Soft Toy Destroyer</p>
+                        </div>
+                    </div>
+                    <div class="flag-wrapper tl-gradient-border">
+                        <div class="flag"></div>
+                    </div>
+                </div>
+
+                <div class="tl-image-wrapper">
+                    <div class="tl-image">
+                        <img src="/assets/images/tl/freyja-min.jpg" alt="Freyja" />
+                    </div>
+                    <div class="border">
+                        <img src="/assets/images/tl/PawsMonogramFrame.svg" alt="" />
+                    </div>
+                </div>
+
+                <div class="tl-skills">
+                    <div class="skill">
+                        <div class="skill-name tl-gradient-border">
+                            <div class="content">
+                                Borking Volume
+                            </div>
+                        </div>
+                        <div class="skill-level tl-gradient-border">
+                            <div class="content">
+                                11
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-name tl-gradient-border">
+                            <div class="content">
+                                Treat Eating
+                            </div>
+                        </div>
+                        <div class="skill-level tl-gradient-border">
+                            <div class="content">
+                                7.3
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-name tl-gradient-border">
+                            <div class="content">
+                                Zoomies Speed
+                            </div>
+                        </div>
+                        <div class="skill-level tl-gradient-border">
+                            <div class="content">
+                                9.2
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-name tl-gradient-border">
+                            <div class="content">
+                                Cuteness Factor
+                            </div>
+                        </div>
+                        <div class="skill-level tl-gradient-border">
+                            <div class="content">
+                                10
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-name tl-gradient-border">
+                            <div class="content">
+                                Top Trumps Star Rating
+                            </div>
+                        </div>
+                        <div class="skill-level tl-gradient-border">
+                            <div class="content">
+                                99
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tl-description">
+                    <div class="tl-gradient-border">
+                        <div class="content">
+                            A professional toy ripper, nationally ranked barker and lover of belly rubs.
+                            Freyja loves a frisbee, chicken and salmon, and stealing Dad's shoes!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Tom Lynch's card end -->
 
 
     </section>
