Added Sweety Card

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                <h2>Emma<br><span>Motto: Eat Sleep and Repeat</span></h2>
            </div>
          </div>
-        
+
 
     <!--Emma's card end-->
 
@@ -749,6 +749,24 @@
         </div>
 
         <!-- Tom Lynch's card end -->
+
+        <!-- Mahesh's Card Start -->
+        <div class="mahesh-card">
+            <div class="div-card">
+              <img src="assets/images/maheshus.jpeg" alt="">
+              <h1>Sweety</h1>
+              <div class="div-card2">
+                <p><span>Breed:</span> Labrador</p>
+                <p><span>Age:</span> 7 Months</p>
+              </div>
+              <div class="about">
+                  <h4>I Like to:</h4>
+                  <span>Play Fetch</span>
+                  <span>Pose for photos</span>
+              </div>
+            </div>
+        </div>
+        <!-- Mahesh's Card End -->
 
 
     </section>
