--- a/index.html
+++ b/index.html
@@ -593,6 +593,17 @@
 
     <!--Emma's card end-->
 
+    <!--Debra-Kaye's card-->
+    <div class="parker-card">
+            <div class="parker-image">
+                <img src="assets/images/parker.jpg" alt="cute puppy">
+            </div>
+                <div class="parker-text">
+                    <h1 class="parker-border">Parker </h1>
+                    <p>The human who made this doesn't have me yet, but wants a cute species of me one day. :)</p>
+                    <p>I'm waiting for you to be my best friend, human!</p>
+                </div>
+    </div>            
     </section>
 
     <!-- Scripts -->
