--- a/index.html
+++ b/index.html
@@ -768,7 +768,21 @@
         </div>
         <!-- Mahesh's Card End -->
 
-
+       <!--Sagi's Card start-->
+       <div class="container">
+           <div class="first">
+               <img class=deny-pic src="assets/images/denny.jpg" alt="Denny">
+           </div>
+           <div class="second">
+               <h1>Denny</h1>
+               <p><span>Age:</span>6 years old</p>
+               <p><span>Hobby:</span> Deer loves to run and jump he also swim time to time.</p>
+               <p><span>Location: </span>He lives in Warsaw along with me</p>
+               <a href="https://github.com/ratsagi"><img class="gh-icon"src="assets/icons/github.png" alt="my github"></a>
+               <button>Find more about deer!</button>
+           </div>
+       </div>
+       <!--Sagi's Card end-->
     </section>
 
     <footer>
