I have added classnames and id for html elements

--- a/index.html
+++ b/index.html
@@ -774,12 +774,12 @@
                <img class=deny-pic src="assets/images/denny.jpg" alt="Denny">
            </div>
            <div class="second">
-               <h1>Denny</h1>
-               <p><span>Age:</span>6 years old</p>
-               <p><span>Hobby:</span> Deer loves to run and jump he also swim time to time.</p>
-               <p><span>Location: </span>He lives in Warsaw along with me</p>
+               <h1 id="name">Denny</h1>
+               <p class="text"><span class="wrap-me">Age:</span>6 years old</p>
+               <p class="text"><span class="wrap-me">Hobby:</span> Deer loves to run and jump he also swim time to time.</p>
+               <p class="text"><span class="wrap-me">Location: </span>He lives in Warsaw along with me</p>
                <a href="https://github.com/ratsagi"><img class="gh-icon"src="assets/icons/github.png" alt="my github"></a>
-               <button>Find more about deer!</button>
+               <button id="click-me">Find more about deer!</button>
            </div>
        </div>
        <!--Sagi's Card end-->
