Add Parker card

--- a/index.html
+++ b/index.html
@@ -593,18 +593,19 @@
 
     <!--Emma's card end-->
 
-    <!--Debra-Kaye's card-->
+    <!--PARKER Start-->
     <div class="parker-card">
             <div class="parker-image">
                 <img src="assets/images/parker.jpg" alt="cute puppy">
             </div>
                 <div class="parker-text">
-                    <h1 class="parker-border">Parker </h1>
+                    <h1>Parker</h1>
                     <p>The human who made this doesn't have me yet, but wants a cute species of me one day. :)</p>
                     <p>I'm waiting for you to be my best friend, human!</p>
                 </div>
-    </div>            
-    </section>
+    </div>
+
+    <!--PARKER End-->
 
     <!-- Scripts -->
     <script src="./assets/scripts/main.js"></script>
