Updated h1 and p elements

--- a/index.html
+++ b/index.html
@@ -599,9 +599,9 @@
                 <img src="assets/images/parker.jpg" alt="cute puppy">
             </div>
                 <div class="parker-text">
-                    <h1>Parker</h1>
-                    <p>The human who made this doesn't have me yet, but wants a cute species of me one day. :)</p>
-                    <p>I'm waiting for you to be my best friend, human!</p>
+                    <h1 class="parker-h1">Parker</h1>
+                    <p class="parker-p">The human who made this doesn't have me yet, but wants a cute species of me one day. :)</p>
+                    <p class="parker-p">I'm waiting for you to be my best friend, human!</p>
                 </div>
     </div>
 
