--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
         <!-- Mahesh's Card End -->
 
        <!--Sagi's Card start-->
-       <div class="container">
+       <div class="sagis-container">
            <div class="first">
                <img class=deny-pic src="assets/images/denny.jpg" alt="Denny">
            </div>
