Add Luna's card

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap" rel="stylesheet"> 
 
     <!-- CSS STYLESHEET -->
     <link rel="stylesheet" href="./assets/styles/style.css" />
@@ -783,6 +786,19 @@
            </div>
        </div>
        <!--Sagi's Card end-->
+
+       <!-- Luna's card -->
+       <div id="luna-card">
+            <div id="luna-card-image">
+            </div>
+            <div id="luna-card-text-container">
+                <p id="luna-card-subtitle">Meet my dog</p>
+                <h1 id="luna-card-title">Luna</h1>
+                <p id="luna-card-description"><small>Luna is a 3 year old rescue dog who's the most loving creature I've ever met! Her favorite activity is running really fast and cuddling to watch TV with her humans. :) <small></p>
+                <a href="https://github.com/barbaraaliverti/" target="_blank" id="barbara-github-icon"><i class="fab fa-github fa-2x"></i></a>
+            </div>	
+        </div>
+       <!-- Luna's card -->
     </section>
 
     <footer>
@@ -793,6 +809,7 @@
     <!-- Scripts -->
     <script src="./assets/scripts/main.js"></script>
     <script type='text/javascript' src='./assets/scripts/joinUs.js'></script>
+    <script src="https://kit.fontawesome.com/1617ca5d0a.js" crossorigin="anonymous"></script>
 
 </body>
 
