added husky card

--- a/index.html
+++ b/index.html
@@ -799,6 +799,33 @@
             </div>	
         </div>
        <!-- Luna's card -->
+
+       <!-- Aniket's Card  -->
+       <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./assets/images/husky.jpeg"  style="width:300px;height:300px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>Siberian Husky</h1>
+            <p>Tommy</p>
+            <p>tommy is 4 years old</p>
+            
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
     </section>
 
     <footer>
