--- a/index.html
+++ b/index.html
@@ -814,19 +814,49 @@
           </div>
         </div>
       </div>
-
-
-
-
-
-
-
-
-
-
-
-
     </section>
+<!-- devesh's card start -->
+
+<div class="wrapper">
+    <div class="card">
+      <div class="front">
+        <h1>Bruno and Brownie</h1>
+        <p>Bloodhound<span>2018</span></p>
+        <p>Misky<span>2017</span></p>
+        <p class="price">$ 30.00</p>
+      </div>
+      <div class="right">
+        <h2>Bruno and Brownie</h2>
+        <ul>
+          <li>Height 3" </li>
+          <li>Weight 31.75kg </li>
+          <li>Wheelbase	14"</li>
+          <li>Nose	1.875"</li>
+          <li>Tail	1.25"</li>
+        </ul>
+        <hr>
+        <ul>
+            <li>Height 2" </li>
+            <li>Weight 20.75kg </li>
+            <li>Wheelbase	14"</li>
+            <li>Nose	1.0"</li>
+            <li>Tail	1.2"</li>
+          </ul>
+        <button>Adopt</button>
+      </div>
+    </div>
+    <div class="img-wrapper">
+         <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlZjEbv91J_1Ot2f2Nbqn0Oj43TGHA269uow&usqp=CAU' alt=''>    
+    </div>
+  </div>
+  <!-- devesh's card end -->
+
+
+
+
+
+
+
 
     <footer>
         <p> Want to know more about our team? 👇 </p>
