--- a/index.html
+++ b/index.html
@@ -816,7 +816,18 @@
       </div>
 
 
-
+  <!-- harshit's card  -->
+  <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        
+        <div class="cardss">
+            <img src="https://picsum.photos/id/237/200/300" alt="John" style="width:100%" height="50%">
+            <h1>Betty</h1>
+            <p class="title"> Dark Black , chubby , intelligent , Loyal companion </p>
+            <h3> My Lovely Pet</h3>
+            
+            <p><button>Contact</button></p>
+        </div>
 
 
 
