closing a tag someone else added in

--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
             <div id="luna-card-text-container">
                 <p id="luna-card-subtitle">Meet my dog</p>
                 <h1 id="luna-card-title">Luna</h1>
-                <p id="luna-card-description"><small>Luna is a 3 year old rescue dog who's the most loving creature I've ever met! Her favorite activity is running really fast and cuddling to watch TV with her humans. :) <small></p>
+                <p id="luna-card-description"><small>Luna is a 3 year old rescue dog who's the most loving creature I've ever met! Her favorite activity is running really fast and cuddling to watch TV with her humans. :) </small></p>
                 <a href="https://github.com/barbaraaliverti/" target="_blank" id="barbara-github-icon"><i class="fab fa-github fa-2x"></i></a>
             </div>	
         </div>
