--- a/index.html
+++ b/index.html
@@ -814,11 +814,11 @@
           </div>
         </div>
       </div>
-    </section>
+
 <!-- devesh's card start -->
 
 <div class="wrapper">
-    <div class="card">
+    <div class="cardb">
       <div class="front">
         <h1>Bruno and Brownie</h1>
         <p>Bloodhound<span>2018</span></p>
@@ -842,10 +842,10 @@
             <li>Nose	1.0"</li>
             <li>Tail	1.2"</li>
           </ul>
-        <button>Adopt</button>
+        <buttonb>Adopt</buttonb>
       </div>
     </div>
-    <div class="img-wrapper">
+    <div class="img-wrapperb">
          <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlZjEbv91J_1Ot2f2Nbqn0Oj43TGHA269uow&usqp=CAU' alt=''>    
     </div>
   </div>
@@ -857,6 +857,10 @@
 
 
 
+
+
+
+    </section>
 
     <footer>
         <p> Want to know more about our team? 👇 </p>
