--- a/index.html
+++ b/index.html
@@ -898,6 +898,18 @@
         </div>
         <!-- Hitesh's card -->
 
+        <!-- hitesh card 2 -->
+        <div class="hiteshcaed2">
+            <div class="hiteshcard2img">
+                <img src="assets/images/pets/labra.png" alt="">
+            </div>
+            <div class="hiteshcard">
+                <h1 class="hiteshcardtitle"> <b>COOKIE</b> </h1>
+                <h3 class="hiteshcardsubtitle">Brave, Loyal, Carying</h3>
+                <p class="hiteshcarddescription"> They are prized as sporting <br> and hunting dogs. </p>
+            </div>
+        </div>
+
 
     </section>
 
