--- a/index.html
+++ b/index.html
@@ -910,6 +910,24 @@
             </div>
         </div>
 
+        <!--Ashton's Card-->
+        <div class="ash-card-body">
+            <div class="ash-img-container">
+                <img class="ash-img" src="assets/images/Beagle.jpg" alt="">
+            </div>
+            <div class="ash-text-container">
+                <h1 class="ash-h1">Beagle</h1>
+                <ul class="ash-unordered-list">
+                    <li>Handsome</li>
+                    <li>Friendly</li>
+                    <li>Lived on The Enterprise</li>
+                    <li>Saved the world from evil cats</li>
+                </ul>
+                <p class="ash-link-text">
+                    Learn more at <a class="ash-link-wiki" href="https://en.wikipedia.org/wiki/Beagle" target="_blank">wikipedia</a>
+                </p>
+            </div>
+        </div>
 
     </section>
 
