added my pet sheru

--- a/index.html
+++ b/index.html
@@ -848,6 +848,15 @@
         </div>
 
 
+        <!-- Ajmal's Card -->
+        <div class="main_sheru_card">
+            <img src="assets/images/sheru.jpg" alt="">
+            <div class="sheru_info">
+                <h2>🐾Sheru🐾</h2>
+                <p><b>Hobby:</b> Eating and sleeping all day<br><b>Strength:</b> john wick look<br> <b>Weakness:</b> cat next door </p>
+            </div>
+        </div>
+
     </section>
 
     <footer>
