--- a/index.html
+++ b/index.html
@@ -847,8 +847,9 @@
             <a href="https://en.wikipedia.org/wiki/Siberian_Husky" class="btn">Read more</a>
         </div>
 
+        
 
-        <!-- Ajmal's Card -->
+        <!-- Sheru's Card Start-->
         <div class="main_sheru_card">
             <img src="assets/images/sheru.jpg" alt="">
             <div class="sheru_info">
@@ -856,6 +857,8 @@
                 <p><b>Hobby:</b> Eating and sleeping all day<br><b>Strength:</b> john wick look<br> <b>Weakness:</b> cat next door </p>
             </div>
         </div>
+        <!-- Sheru's Card End -->
+
 
     </section>
 
